<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ho_ten"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/textView_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/textView_IddPrefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/IDD"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/textView_CountryCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CCC"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/textView_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gioi_tinh"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/textView_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trinh_do"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/textView_trinhdo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuoi"
            android:textSize="25sp"
            />
        <TextView
            android:id="@+id/textView_tuoi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_thao"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/textView_thethao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/am_nhac"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/textView_amnhac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"/>
    </LinearLayout>
    <Button
        android:id="@+id/button_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Return"
        android:textSize="25sp"
        android:layout_weight="1"
        android:layout_margin="10dp"/>
</LinearLayout>